@@ -22,7 +22,11 @@ def test_out_index(loghub, input, output):
       "1.1": {"+files": {"p1-1.1.tar.gz": "root/dev/pkg/1.1/p1-1.1.tar.gz"},},
      },
     ["*p1-1.1.tar.gz*", "*p1-1.0.tar.gz*",
-    ])
+    ]),
+    ({"1.0": {"+files": {"p1-1.0.tar.gz": "root/dev/pkg/1.0/p1-1.0.tar.gz"},
+              "+shadowing": [{"+files":
+                    {"p1-1.0.tar.gz": "root/prod/pkg/1.0/p1-1.0.tar.gz"}}]}},
+    ["*dev*p1-1.0.tar.gz*", "*prod*p1-1.0.tar.gz"]),
 ])
 def test_out_project(loghub, input, output):
     loghub.current.reconfigure(dict(
